--- a/workloads/android/pipelines/tests/cts_execution/Jenkinsfile
+++ b/workloads/android/pipelines/tests/cts_execution/Jenkinsfile
@@ -46,21 +46,21 @@ pipeline {
            description: '''<p>The Jenkins GCE Clouds label for the Cuttlefish instance template, e.g.<br/></p>
            <ul>
              <li>cuttlefish-vm-main</li>
-             <li>cuttlefish-vm-v101</li>
+             <li>cuttlefish-vm-v110</li>
            </ul>''')
 
     string(name: 'CUTTLEFISH_DOWNLOAD_URL',
            defaultValue: '',
-           description: "<p>Storage URL pointing to the location of the Cuttlefish Virtual Device images and host packages, e.g.<br/>gs://${env.CLOUD_PROJECT}-aaos/Android/Builds/AAOS_Builder/&lt;BUILD_NUMBER&gt;</p>")
+           description: "<p>Storage URL pointing to the location of the Cuttlefish Virtual Device images and host packages, e.g.<br/>gs://${env.ANDROID_BUILD_BUCKET_ROOT_NAME}/Android/Builds/AAOS_Builder/&lt;BUILD_NUMBER&gt;</p>")
 
-    choice(name: 'CTS_VERSION',
+    choice(name: 'ANDROID_VERSION',
            choices: ['14', '15'],
-           description: '''<p>Select CTS version: Android 14 or 15<br/>
+           description: '''<p>Select Android version: Android 14 or 15<br/>
            Essential for picking the correct test hardness</p>''')
 
     string(name: 'CTS_DOWNLOAD_URL',
            defaultValue: '',
-           description: "<p>CTS test harness download URL.<br/>Use official CTS test harness (empty field) or one built from CTS Builder job and stored in GS Bucket, e.g.<br/>gs://${env.CLOUD_PROJECT}-aaos/Android/Builds/CTS_Builder/<BUILD_NUMBER>/android-cts.zip</p>")
+           description: "<p>Optional CTS test harness download URL.<br/>Use official CTS test harness (empty field) or one built from CTS Builder job and stored in GS Bucket, e.g.<br/>gs://${env.ANDROID_BUILD_BUCKET_ROOT_NAME}/Android/Builds/CTS_Builder/<BUILD_NUMBER>/android-cts.zip</p>")
 
     string(name: 'CTS_TESTPLAN',
            defaultValue: 'cts-virtual-device-stable',
@@ -113,9 +113,9 @@ pipeline {
               sh '''
                 CUTTLEFISH_DOWNLOAD_URL="${CUTTLEFISH_DOWNLOAD_URL}" \
                 CUTTLEFISH_MAX_BOOT_TIME="${CUTTLEFISH_MAX_BOOT_TIME}" \
-                NUM_INSTANCES=${NUM_INSTANCES} \
-                VM_CPUS=${VM_CPUS} \
-                VM_MEMORY_MB=${VM_MEMORY_MB} \
+                NUM_INSTANCES="${NUM_INSTANCES}" \
+                VM_CPUS="${VM_CPUS}" \
+                VM_MEMORY_MB="${VM_MEMORY_MB}" \
                 ./workloads/android/pipelines/tests/cvd_launcher/cvd_start_stop.sh --start
               '''
             }
@@ -139,11 +139,11 @@ pipeline {
                   MTK_CONNECT_DOMAIN=${HORIZON_DOMAIN} \
                   MTK_CONNECT_USERNAME=${MTK_CONNECT_USERNAME} \
                   MTK_CONNECT_PASSWORD=${MTK_CONNECT_PASSWORD} \
-                  MTK_CONNECTED_DEVICES=${NUM_INSTANCES} \
+                  MTK_CONNECTED_DEVICES="${NUM_INSTANCES}" \
                   MTK_CONNECT_TEST_ARTIFACT="${CUTTLEFISH_DOWNLOAD_URL}" \
                   MTK_CONNECT_TESTBENCH="${JOB_NAME}-${BUILD_NUMBER}" \
                   timeout 15m ./workloads/android/pipelines/tests/cvd_launcher/cvd_mtk_connect.sh --start
-                  '''
+                '''
               }
             }
           }
@@ -159,45 +159,49 @@ pipeline {
           steps {
             catchError(buildResult: 'FAILURE', stageResult: 'FAILURE') {
               sh '''
-                CTS_VERSION=${CTS_VERSION} \
-                CTS_DOWNLOAD_URL=${CTS_DOWNLOAD_URL} \
+                ANDROID_VERSION=${ANDROID_VERSION} \
+                CTS_DOWNLOAD_URL="${CTS_DOWNLOAD_URL}" \
                 ./workloads/android/pipelines/tests/cts_execution/cts_initialise.sh
-                CTS_TESTPLAN=${CTS_TESTPLAN} \
-                CTS_MODULE=${CTS_MODULE} \
-                CTS_TIMEOUT=${CTS_TIMEOUT} \
-                SHARD_COUNT=${NUM_INSTANCES} \
+                CTS_TESTPLAN="${CTS_TESTPLAN}" \
+                CTS_MODULE="${CTS_MODULE}" \
+                CTS_TIMEOUT="${CTS_TIMEOUT}" \
+                SHARD_COUNT="${NUM_INSTANCES}" \
                 ./workloads/android/pipelines/tests/cts_execution/cts_execution.sh
               '''
+
+              archiveArtifacts artifacts: 'cts*.txt', followSymlinks: false, onlyIfSuccessful: false, allowEmptyArchive: true
+              archiveArtifacts artifacts: 'android-cts-results/invocation_summary.txt', followSymlinks: false, onlyIfSuccessful: false, allowEmptyArchive: true
+              archiveArtifacts artifacts: 'android-cts-results/*.zip', followSymlinks: false, onlyIfSuccessful: false, allowEmptyArchive: true
             }
-          }
+	  }
         }
-      }
-      post {
-        always {
-          catchError(buildResult: 'FAILURE', stageResult: 'FAILURE') {
-            withCredentials([usernamePassword(credentialsId: 'jenkins-mtk-connect-apikey', passwordVariable: 'MTK_CONNECT_PASSWORD', usernameVariable: 'MTK_CONNECT_USERNAME')]) {
-              sh '''
-                if test -n "$CUTTLEFISH_DOWNLOAD_URL"; then
-                  if [ $MTK_CONNECT_ENABLE = true ]; then
-                    sudo \
-                    MTK_CONNECT_DOMAIN=${HORIZON_DOMAIN} \
-                    MTK_CONNECT_USERNAME=${MTK_CONNECT_USERNAME} \
-                    MTK_CONNECT_PASSWORD=${MTK_CONNECT_PASSWORD} \
-                    MTK_CONNECTED_DEVICES=${NUM_INSTANCES} \
-                    MTK_CONNECT_TESTBENCH="${JOB_NAME}-${BUILD_NUMBER}" \
-                    ./workloads/android/pipelines/tests/cvd_launcher/cvd_mtk_connect.sh --stop || true
-                  fi
-                  ./workloads/android/pipelines/tests/cvd_launcher/cvd_start_stop.sh --stop || true
-                else
-                  echo "Post stage skipped due to conditional"
-                fi
-              '''
+
+        stage ('Stop Virtual Devices') {
+          when { expression { env.CUTTLEFISH_DOWNLOAD_URL } }
+          steps {
+            catchError(buildResult: 'FAILURE', stageResult: 'FAILURE') {
+              withCredentials([usernamePassword(credentialsId: 'jenkins-mtk-connect-apikey', passwordVariable: 'MTK_CONNECT_PASSWORD', usernameVariable: 'MTK_CONNECT_USERNAME')]) {
+                script {
+                  sh 'echo "Stopping  MTK Connect"'
+                  sh '''
+                    if [ $MTK_CONNECT_ENABLE = true ]; then
+                      sudo \
+                      MTK_CONNECT_DOMAIN=${HORIZON_DOMAIN} \
+                      MTK_CONNECT_USERNAME=${MTK_CONNECT_USERNAME} \
+                      MTK_CONNECT_PASSWORD=${MTK_CONNECT_PASSWORD} \
+                      MTK_CONNECTED_DEVICES="${NUM_INSTANCES}" \
+                      MTK_CONNECT_TESTBENCH="${JOB_NAME}-${BUILD_NUMBER}" \
+                      timeout 10m ./workloads/android/pipelines/tests/cvd_launcher/cvd_mtk_connect.sh --stop || true
+                    fi
+                  '''
+                  sh 'echo "Stopping Cuttlefish"'
+                  sh './workloads/android/pipelines/tests/cvd_launcher/cvd_start_stop.sh --stop || true'
+
+                }
+                archiveArtifacts artifacts: 'cvd*.log', followSymlinks: false, onlyIfSuccessful: false, allowEmptyArchive: true
+                archiveArtifacts artifacts: 'cuttlefish*.tgz', followSymlinks: false, onlyIfSuccessful: false, allowEmptyArchive: true
+              }
             }
-            archiveArtifacts artifacts: 'cvd*.log', followSymlinks: false, onlyIfSuccessful: false, allowEmptyArchive: true
-            archiveArtifacts artifacts: 'cuttlefish*.tgz', followSymlinks: false, onlyIfSuccessful: false, allowEmptyArchive: true
-            archiveArtifacts artifacts: 'cts*.txt', followSymlinks: false, onlyIfSuccessful: false, allowEmptyArchive: true
-            archiveArtifacts artifacts: 'android-cts-results/invocation_summary.txt', followSymlinks: false, onlyIfSuccessful: false, allowEmptyArchive: true
-            archiveArtifacts artifacts: 'android-cts-results/*.zip', followSymlinks: false, onlyIfSuccessful: false, allowEmptyArchive: true
           }
         }
       }
@@ -232,7 +236,7 @@ pipeline {
                   MTK_CONNECT_PASSWORD=${MTK_CONNECT_PASSWORD} \
                   MTK_CONNECT_TESTBENCH="${JOB_NAME}-${BUILD_NUMBER}" \
                   MTK_CONNECT_DELETE_OFFLINE_TESTBENCHES=true \
-                  timeout 10m ./workloads/android/pipelines/tests/cvd_launcher/cvd_mtk_connect.sh --delete
+                  timeout 10m ./workloads/android/pipelines/tests/cvd_launcher/cvd_mtk_connect.sh --delete || true
                 '''
               }
             }
