--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -96,6 +96,9 @@ jobs:
       environment: ${{ steps.get-env.outputs.environment }}
       env_only: ${{ steps.get-env.outputs.env_only }}
     steps:
+      - name: Print environment name to output
+        run: echo "Parsed environment name is ${{ inputs.environment }}"
+
       - name: get environment
         id: get-env
         shell: bash
@@ -106,9 +109,6 @@ jobs:
             env_only=${temp%-plan*}
             env_only=${env_only%-apply*}
             echo "env_only=$env_only" >> $GITHUB_OUTPUT;
-          elif [[ "${{ github.ref }}" == 'refs/heads/env/sbx' ]]; then
-            echo "environment=sbx" >> $GITHUB_OUTPUT;
-            echo "env_only=sbx" >> $GITHUB_OUTPUT;
           fi
 
   terraform:
@@ -132,6 +132,26 @@ jobs:
           echo "$PKCS8_KEY" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
 
+      - name: Generate encoded argocd bcrypt hash
+        id: generate-encoded-argocd-bcrypt-hash
+        shell: bash
+        run: |
+          # Install argocd cli
+          curl -sSL -o argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
+          chmod +x argocd
+
+          # Generate bcrypt hash for argocd password
+          HASH=$(./argocd account bcrypt --password "${{ secrets.gh-argocd-initial-password }}")
+
+          # Encode the hash with base64
+          ENCODED_HASH=$(echo -n "$HASH" | base64)
+
+          # Save the encoded hash as an output variable
+          echo "argocd_encoded_bcrypt_hash=$ENCODED_HASH" >> $GITHUB_OUTPUT
+
+          # Clean up the downloaded binary
+          rm argocd
+
       - name: set environment variables
         id: set-vars
         shell: bash
@@ -150,7 +170,7 @@ jobs:
           echo "TF_VAR_sdv_gh_cuttlefish_vm_ssh_private_key<<EOF">> $GITHUB_ENV
           echo  "${{ secrets.gh-cuttlefish-vm-ssh-private-key }}" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
-          echo "TF_VAR_sdv_gh_argocd_initial_password=${{ secrets.gh-argocd-initial-password }}" >> $GITHUB_ENV
+          echo "TF_VAR_sdv_gh_argocd_initial_password_bcrypt=${{ steps.generate-encoded-argocd-bcrypt-hash.outputs.argocd_encoded_bcrypt_hash }}" >> $GITHUB_ENV
           echo "TF_VAR_sdv_gh_jenkins_initial_password=${{ secrets.gh-jenkins-initial-password }}" >> $GITHUB_ENV
           echo "TF_VAR_sdv_gh_keycloak_initial_password=${{ secrets.gh-keycloak-initial-password }}" >> $GITHUB_ENV
           echo "TF_VAR_sdv_gh_gerrit_admin_initial_password=${{ secrets.gh-gerrit-admin-initial-password }}" >> $GITHUB_ENV
@@ -276,7 +296,7 @@ jobs:
         continue-on-error: true
 
       - name: Reformat Plan
-        if: github.ref != 'refs/heads/env/sbx'
+        if: ${{ inputs.environment }} != ''
         env:
           TFPLAN_STDOUT: ${{ steps.tfplan.outputs.stdout }}
           TFPLAN_STDERR: ${{ steps.tfplan.outputs.stderr }}
@@ -290,7 +310,7 @@ jobs:
           fi
 
       - name: Put Plan in Env Var
-        if: github.ref != 'refs/heads/env/sbx'
+        if: ${{ inputs.environment }} != ''
         run: |
           PLAN=$(cat plan.txt)
           echo "PLAN<<EOF" >> $GITHUB_ENV
@@ -299,7 +319,7 @@ jobs:
 
       - name: Post Plan to GitHub PR
         uses: mshick/add-pr-comment@v2
-        if: github.ref != 'refs/heads/env/sbx'
+        if: ${{ inputs.environment }} != ''
         with:
           allow-repeats: false
           repo-token: ${{steps.get_github_app_token.outputs.token}}
@@ -321,7 +341,7 @@ jobs:
       - name: terraform apply
         working-directory: ${{ inputs.directory }}/
         id: tfapply
-        if: github.ref == 'refs/heads/env/sbx'
+        if: ${{ inputs.environment }} != ''
         env:
           TF_VAR_sdv_gh_access_token: ${{ steps.get_github_app_token.outputs.token }}
         run: |
@@ -330,7 +350,7 @@ jobs:
         continue-on-error: true
 
       - name: Post Apply Success
-        if: github.ref == 'refs/heads/env/sbx' && steps.tfapply.outcome == 'success'
+        if: ${{ inputs.environment }} != '' && steps.tfapply.outcome == 'success'
         uses: mshick/add-pr-comment@v2
         with:
           allow-repeats: false
@@ -344,7 +364,7 @@ jobs:
         continue-on-error: true
 
       - name: Post Apply Failure
-        if: github.ref == 'refs/heads/env/sbx' && steps.tfapply.outcome == 'failure'
+        if: ${{ inputs.environment }} != '' && steps.tfapply.outcome == 'failure'
         uses: mshick/add-pr-comment@v2
         with:
           allow-repeats: false
@@ -358,7 +378,7 @@ jobs:
         continue-on-error: true
 
       - name: Fail if apply failed
-        if: github.ref == 'refs/heads/env/sbx' && steps.tfapply.outcome == 'failure'
+        if: ${{ inputs.environment }} != '' && steps.tfapply.outcome == 'failure'
         uses: actions/github-script@v6
         with:
           script: |
