--- a/gitops/env/stage1/argocd-secrets.yaml
+++ b/gitops/env/stage1/argocd-secrets.yaml
@@ -81,8 +81,7 @@ spec:
   target:
     name: argocd-secret
     creationPolicy: Merge
-    decodingStrategy: Base64
   data:
     - secretKey: admin.password
       remoteRef:
-        key: argocdInitialPasswordBcrypt
+        key: argocdInitialPassword
